# web

./: .eleventy.js  .gitignore  CNAME  README.md  package-lock.json  package.json  pyproject.toml  web_scraper.py
.github/workflows/: deploy.yaml
configs/: main.yaml
configs/four_star/: default.yaml
spiral_hwy/: index.njk
spiral_hwy/configs/: main.yaml
spiral_hwy/configs/veezi/: base.yaml  default.yaml  old-default.yaml  test.yaml
spiral_hwy/css/: styles.css
spiral_hwy/tests/: tests.py
spiral_hwy/tests/ground_truth/veezi/: movies.json  posters.json
spiral_hwy/tests/websites/alamo_sf/: landing_page.html  show_page.html
spiral_hwy/tests/websites/balboa/balboa_star_theater_show_times_files/: Poster  Poster_004  Poster_005  Poster_006  Poster_007  Poster_009  Poster_011  Poster_014  custom.css
spiral_hwy/tests/websites/four_star/: four_star_theater_show_times.html
spiral_hwy/tests/websites/four_star/four_star_theater_show_times_files/: Poster  Poster_008  Poster_009  Poster_011  Poster_013  Poster_016  Poster_017  Poster_018  site_D825C76FE2897D5CB97EC3DF47EE308D.js
spiral_hwy/tests/websites/landmark_opera_plaza/: showtimes.html
spiral_hwy/tests/websites/marina/marina_star_theater_show_times_files/: Poster_002  Poster_004  Poster_005  Poster_006  Poster_007  Poster_009
spiral_hwy/tests/websites/presidio/presidio_star_theater_show_times_files/: Poster  Poster_003  Poster_006  custom.css  jstext.js.es
spiral_hwy/tests/websites/roxie/roxie_theater_show_times_files/: Poster  Poster_003  Poster_005  Poster_006  Poster_007  Poster_010  Poster_011  Poster_012  Poster_013  Poster_015  Poster_016  Poster_017  Poster_018  Poster_019  Poster_021  Poster_023  Poster_024  Poster_025  custom.css
spiral_hwy/tests/websites/vogue/: vogue-theater-show-times.html
spiral_hwy/tests/websites/vogue/vogue-theater-show-times_files/: Poster  Poster_003  Poster_005
spiral_hwy/tools/: alamo_scraper.py  inspect_alamo.py  landmark_scraper.py  sort.py  web_scraper.py
src/: index.njk  requirements.txt  web_scraper.py
src/_data/: movies.json
src/_includes/: base.njk
src/configs/: main.yaml
src/configs/cinema_sf/: default.yaml
src/configs/veezi/: default.yaml
src/css/: styles.css
src/websites/balboa/: balboa_star_theater_show_times.html
src/websites/balboa/balboa_star_theater_show_times_files/: Poster_003  Poster_008  Poster_010  Poster_012  Poster_013  globalize.culture.en-us.js
src/websites/four_star/four_star_theater_show_times_files/: Poster_002  Poster_003  Poster_004  Poster_005  Poster_006  Poster_007  Poster_010  Poster_012  Poster_014  Poster_015  Poster_019  custom.css
src/websites/marina/: marina_star_theater_show_times.html
src/websites/marina/marina_star_theater_show_times_files/: Poster  Poster_003  Poster_008  Sessions_3AD9815AB6A8815A1AD29565B5A5CC8C.css  ShoppingCart_BB78B986E516951CFAC7E87859184396.js  custom.css
src/websites/presidio/: presidio_star_theater_show_times.html
src/websites/presidio/presidio_star_theater_show_times_files/: Poster_005  site_6FB5C4C126B4E9D452B2003007B536A8.css
src/websites/roxie/: roxie_theater_show_times.html
src/websites/roxie/roxie_theater_show_times_files/: Poster_002  Poster_004  Poster_008  Poster_009  Poster_014  Poster_020  Poster_022  Poster_026
src/websites/vogue/vogue-theater-show-times_files/: Poster_004  custom.css
